--- a/method_C/03.0_classify-loci.Rmd
+++ b/method_C/03.0_classify-loci.Rmd
@@ -19,29 +19,28 @@ library("Homo.sapiens")
 fuse.path <- "/home/jason/science/servers/"
 serv.dir <- fuse.path %&% "FUSE5/"
 proj.dir <- serv.dir %&% "projects/t2d_classification/"
-methA.dir <- proj.dir %&% "method_A/"
 work.dir <- proj.dir %&% "method_C/"
 analysis.dir <- work.dir %&% "analysis_files/"
 plot.dir <- work.dir %&% "plots/"
 
-block.df <- fread(methA.dir%&%"null_results/null_results_blocks.txt",sep="\t")
-fcred.df <- fread(methA.dir %&%"null_results/null_results_func-cred-sets.txt")
+cred.df <- fread(work.dir %&% "genetic_credible_sets/gencred.txt")
 
+enrich.dir <- work.dir %&% "enrichment_files/"
 
 ```
 
 
 ```{r}
 
-keep.df <- fread(proj.dir %&% "input_data/" %&% "380.locus.ID.txt")
-keep.vec <- keep.df$Locus.ID_inCREDS
+#keep.df <- fread(proj.dir %&% "input_data/" %&% "380.locus.ID.txt")
+#keep.vec <- keep.df$Locus.ID_inCREDS
 
-weighted.df <- fread(analysis.dir %&% "tissue_ppa_divvy-full-weighted-unscaled-CodingNotRN.txt") %>% 
-  filter(.,Locus.ID %in% keep.vec)
-unweighted.df <- fread(analysis.dir %&% "tissue_ppa_divvy-full-unweighted-unscaled-CodingNotRN.txt") %>% 
-  filter(.,Locus.ID %in% keep.vec)
-alt.df <- fread(analysis.dir %&% "tissue-scores-alternative_CodingNotRN.txt") %>% 
-  filter(.,Locus.ID %in% keep.vec) 
+#weighted.df <- fread(analysis.dir %&% "tissue_ppa_divvy-full-weighted-unscaled-CodingNotRN.txt")# %>% 
+ # filter(.,Locus.ID %in% keep.vec)
+unweighted.df <- fread(analysis.dir %&% "tissue_ppa_divvy-full-unweighted-unscaled.txt")# %>% 
+ # filter(.,Locus.ID %in% keep.vec)
+#alt.df <- fread(analysis.dir %&% "tissue-scores-alternative_CodingNotRN.txt") #%>% 
+  #filter(.,Locus.ID %in% keep.vec) 
 
 ```
 
@@ -73,7 +72,7 @@ build_classify_df <- function(ppa.df){
   symbol <- map(1:dim(ppa.df)[1],function(i){
     setTxtProgressBar(pb,i)
     loc.id <- ppa.df$Locus.ID[i]
-    filter(block.df,Locus.ID==loc.id)$refseq
+    filter(cred.df,Locus.ID==loc.id)$symbol %>% unique(.)
   }) %>% as.character(.)
   out.df <- cbind(ppa.df,assigned_20,assigned_50,assigned_80,symbol)
   out.df$assigned_20 <- as.character(out.df$assigned_20)
@@ -83,33 +82,77 @@ build_classify_df <- function(ppa.df){
   return(out.df)
 }
 
+
+make_bed_df <- function(prebed,tname){
+  out.df <- dplyr::select(prebed,one_of("CHR","POS"))
+  out.df$POS1 <- out.df$POS
+  out.df <- out.df[!duplicated(out.df),]
+  out.df$tissue <- tname 
+  return(out.df)
+}
+
+save_classifed_snp_bedfiles <- function(class.df,type.name="unweighted"){
+  df <- filter(cred.df,Locus.ID %in% (filter(class.df,assigned_20=="islet")$Locus.ID)) %>% make_bed_df(.,"islet")
+  write.table(df,file=enrich.dir %&% type.name %&% "/" %&%type.name%&%"_islet_"%&%"thresh20.txt",sep="\t",quote=F,row.names=F,col.names=F)
+  df <- filter(cred.df,Locus.ID %in% (filter(class.df,assigned_20=="adipose")$Locus.ID))  %>% make_bed_df(.,"adipose")
+  write.table(df,file=enrich.dir %&% type.name %&% "/" %&%type.name%&%"_adipose_"%&%"thresh20.txt",sep="\t",quote=F,row.names=F,col.names=F)
+  df <- filter(cred.df,Locus.ID %in% (filter(class.df,assigned_20=="liver")$Locus.ID))  %>% make_bed_df(.,"liver")
+  write.table(df,file=enrich.dir %&% type.name %&% "/" %&%type.name%&%"_liver_"%&%"thresh20.txt",sep="\t",quote=F,row.names=F,col.names=F)
+  df <- filter(cred.df,Locus.ID %in% (filter(class.df,assigned_20=="muscle")$Locus.ID))  %>% make_bed_df(.,"muscle")
+  write.table(df,file=enrich.dir %&% type.name %&% "/" %&%type.name%&%"_muscle_"%&%"thresh20.txt",sep="\t",quote=F,row.names=F,col.names=F)
+  df <- filter(cred.df,Locus.ID %in% (filter(class.df,assigned_50=="islet")$Locus.ID))  %>% make_bed_df(.,"islet")
+  write.table(df,file=enrich.dir %&% type.name %&% "/" %&%type.name%&%"_islet_"%&%"thresh50.txt",sep="\t",quote=F,row.names=F,col.names=F)
+  df <- filter(cred.df,Locus.ID %in% (filter(class.df,assigned_50=="adipose")$Locus.ID))  %>% make_bed_df(.,"adipose")
+  write.table(df,file=enrich.dir %&% type.name %&% "/" %&%type.name%&%"_adipose_"%&%"thresh50.txt",sep="\t",quote=F,row.names=F,col.names=F)
+  df <- filter(cred.df,Locus.ID %in% (filter(class.df,assigned_50=="liver")$Locus.ID))  %>% make_bed_df(.,"liver")
+  write.table(df,file=enrich.dir %&% type.name %&% "/" %&%type.name%&%"_liver_"%&%"thresh50.txt",sep="\t",quote=F,row.names=F,col.names=F)
+  df <- filter(cred.df,Locus.ID %in% (filter(class.df,assigned_50=="muscle")$Locus.ID))  %>% make_bed_df(.,"muscle")
+  write.table(df,file=enrich.dir %&% type.name %&% "/" %&%type.name%&%"_muscle_"%&%"thresh50.txt",sep="\t",quote=F,row.names=F,col.names=F)  
+  df <- filter(cred.df,Locus.ID %in% (filter(class.df,assigned_80=="islet")$Locus.ID))  %>% make_bed_df(.,"islet")
+  write.table(df,file=enrich.dir %&% type.name %&% "/" %&%type.name%&%"_islet_"%&%"thresh80.txt",sep="\t",quote=F,row.names=F,col.names=F)
+  df <- filter(cred.df,Locus.ID %in% (filter(class.df,assigned_80=="adipose")$Locus.ID))  %>% make_bed_df(.,"adipose")
+  write.table(df,file=enrich.dir %&% type.name %&% "/" %&%type.name%&%"_adipose_"%&%"thresh80.txt",sep="\t",quote=F,row.names=F,col.names=F)
+  df <- filter(cred.df,Locus.ID %in% (filter(class.df,assigned_80=="liver")$Locus.ID))  %>% make_bed_df(.,"liver")
+  write.table(df,file=enrich.dir %&% type.name %&% "/" %&%type.name%&%"_liver_"%&%"thresh80.txt",sep="\t",quote=F,row.names=F,col.names=F)
+  df <- filter(cred.df,Locus.ID %in% (filter(class.df,assigned_80=="muscle")$Locus.ID))  %>% make_bed_df(.,"muscle")
+  write.table(df,file=enrich.dir %&% type.name %&% "/" %&%type.name%&%"_muscle_"%&%"thresh80.txt",sep="\t",quote=F,row.names=F,col.names=F)
+}
+
+
+
 ```
 
 
 ```{r}
 
-df1 <- build_classify_df(weighted.df)
-df2 <- build_classify_df(unweighted.df)
-df3 <- build_classify_df(alt.df)
 
-write.table(x=df1,file=analysis.dir%&%"classified-loci_weighted.txt",
+df1 <- build_classify_df(unweighted.df)
+df2 <- build_classify_df(weighted.df)
+#df3 <- build_classify_df(alt.df)
+
+
+write.table(x=df1,file=analysis.dir%&%"classified-loci_unweighted.txt",
             sep="\t",quote=F,row.names=FALSE,col.names=TRUE)
-write.table(x=df2,file=analysis.dir%&%"classified-loci_unweighted.txt",
+save_classifed_snp_bedfiles(df1,type.name="unweighted")
+
+write.table(x=df2,file=analysis.dir%&%"classified-loci_weighted.txt",
             sep="\t",quote=F,row.names=FALSE,col.names=TRUE)
-write.table(x=df3,file=analysis.dir%&%"classified-loci_alternative.txt",
-            sep="\t",quote=F,row.names=FALSE,col.names=TRUE)
+save_classifed_snp_bedfiles(df2,type.name="unweighted")
 
-table(df2$assigned_20)
-table(df1$assigned_20)
-table(df3$assigned_20)
+#write.table(x=df3,file=analysis.dir%&%"classified-loci_alternative.txt",
+#            sep="\t",quote=F,row.names=FALSE,col.names=TRUE)
 
-table(df2$assigned_50)
-table(df1$assigned_50)
-table(df3$assigned_50)
+#table(df2$assigned_20)
+#table(df1$assigned_20)
+#table(df3$assigned_20)sl
 
-table(df2$assigned_80)
-table(df1$assigned_80)
-table(df3$assigned_80)
+#table(df2$assigned_50)
+#table(df1$assigned_50)
+#table(df3$assigned_50)
+
+#table(df2$assigned_80)
+#table(df1$assigned_80)
+#table(df3$assigned_80)
 
 ```
 
