--- a/method_C/03.0_classify-loci.Rmd
+++ b/method_C/03.0_classify-loci.Rmd
@@ -35,10 +35,8 @@ enrich.dir <- work.dir %&% "enrichment_files/"
 #keep.df <- fread(proj.dir %&% "input_data/" %&% "380.locus.ID.txt")
 #keep.vec <- keep.df$Locus.ID_inCREDS
 
-#weighted.df <- fread(analysis.dir %&% "tissue_ppa_divvy-full-weighted-unscaled-CodingNotRN.txt")# %>% 
- # filter(.,Locus.ID %in% keep.vec)
-unweighted.df <- fread(analysis.dir %&% "tissue_ppa_divvy-full-unweighted-unscaled.txt")# %>% 
- # filter(.,Locus.ID %in% keep.vec)
+weighted.df <- fread(analysis.dir %&% "tissue_ppa_divvy-full-weighted-unscaled.txt")
+unweighted.df <- fread(analysis.dir %&% "tissue_ppa_divvy-full-unweighted-unscaled.txt")
 #alt.df <- fread(analysis.dir %&% "tissue-scores-alternative_CodingNotRN.txt") #%>% 
   #filter(.,Locus.ID %in% keep.vec) 
 
@@ -137,7 +135,7 @@ save_classifed_snp_bedfiles(df1,type.name="unweighted")
 
 write.table(x=df2,file=analysis.dir%&%"classified-loci_weighted.txt",
             sep="\t",quote=F,row.names=FALSE,col.names=TRUE)
-save_classifed_snp_bedfiles(df2,type.name="unweighted")
+save_classifed_snp_bedfiles(df2,type.name="weighted")
 
 #write.table(x=df3,file=analysis.dir%&%"classified-loci_alternative.txt",
 #            sep="\t",quote=F,row.names=FALSE,col.names=TRUE)
