added conditional ids

--- a/method_C/genetic_credible_sets/make-credset-input.Rmd
+++ b/method_C/genetic_credible_sets/make-credset-input.Rmd
@@ -35,7 +35,13 @@ gcred.dir <- serv.dir %&% "datasets/diamante_hrc/credible_sets/"
 cds.bed <- fread(got2d.dir %&% "reference/genomic/cds.bed")
 cds.gr <- GRanges(seqnames = cds.bed$V1,IRanges(cds.bed$V2,cds.bed$V3))
 
+
+
+
+
+
 ```
+
 
 
 
@@ -73,8 +79,9 @@ build_gen_cred_file <- function(){
     id <- inum[match(var,isnps)]
   }) %>% as.character(.)
   out.df$Locus.ID <- Locus.ID
-  
-  out.df<- dplyr::select(out.df,one_of("Locus.ID","IndexSNP","symbol","SNPID","CHR","POS","PPA","coding"))
+  pb <- txtProgressBar(min=0,max=dim(out.df)[1],style=3)
+  out.df<- dplyr::select(out.df,one_of("Locus.ID","CondID","IndexSNP",
+                              "symbol","SNPID","CHR","POS","PPA","coding"))
   return(out.df)
 }
 
@@ -84,6 +91,82 @@ build_gen_cred_file <- function(){
 ```{r}
 
 gencred.df <- build_gen_cred_file()
+
+
+```
+
+
+
+```{r}
+
+build_full_file <- function(gencred.df){
+  
+
+  genid.df <- fread(proj.dir%&%"analysis_files/lead_hrc_for_Jason.txt",
+                    header=FALSE)
+  names(genid.df) <- c("CondID","IndexSNP")
+  
+  coord.df <- fread(proj.dir %&% "analysis_files/lead_hrc_coord.txt")
+  coord.df$SNPID <- coord.df$Chromosome %&% ":" %&% coord.df$Position
+  
+  SNPID <- unique(gencred.df$IndexSNP)
+  pb <- txtProgressBar(min=0,max=length(SNPID),style=3)
+  out.df <- c()
+  for (i in 1:length(SNPID)){
+    setTxtProgressBar(pb,i)
+    s <- SNPID[i]
+    r <- filter(coord.df,SNPID==s)$dbSNP
+    if (length(r)==0){
+      r <- NA
+      c <- NA
+    } else{
+      c <- filter(genid.df,IndexSNP==r)$CondID
+    }
+    build.df <- data.frame(s,r,c,stringsAsFactors = FALSE)
+    names(build.df) <- c("SNP","RSID","CondID")
+    out.df <- rbind(out.df,build.df)
+  }
+  
+  filter(genid.df,!(IndexSNP%in%out.df$RSID))
+  
+  out.df[out.df$SNP=="chr3:152086533",]$RSID <-"rs13065698"
+  out.df[out.df$SNP=="chr3:152086533",]$CondID <- 
+    filter(genid.df,IndexSNP=="rs13065698")$CondID
+  
+  out.df[out.df$SNP=="chr4:83578271",]$RSID <-"rs12642790"
+  out.df[out.df$SNP=="chr4:83578271",]$CondID <- 
+    filter(genid.df,IndexSNP=="rs12642790")$CondID
+  
+  out.df[out.df$SNP=="chr11:2151761",]$RSID <-"rs555759341"
+  out.df[out.df$SNP=="chr11:2151761",]$CondID <- 
+    filter(genid.df,IndexSNP=="rs555759341")$CondID
+  
+  out.df[out.df$SNP=="chr15:53747228",]$RSID <-"rs528350911"
+  out.df[out.df$SNP=="chr15:53747228",]$CondID <- 
+    filter(genid.df,IndexSNP=="rs528350911")$CondID
+  
+  out.df[out.df$SNP=="chr20:45317678",]$RSID <-"rs560716466"
+  out.df[out.df$SNP=="chr20:45317678",]$CondID <- 
+    filter(genid.df,IndexSNP=="rs560716466")$CondID
+
+  pb <- txtProgressBar(min=0,max=dim(gencred.df)[1],style=3)
+  CondID <- map(1:dim(gencred.df)[1],function(i){
+    setTxtProgressBar(pb,i)
+    id <- gencred.df$IndexSNP[i]
+    condid <- filter(out.df,SNP==id)$CondID
+  }) %>% as.character(.)
+  gencred.df$CondID <- CondID 
+  return(gencred.df)
+}
+
+```
+
+
+
+```{r}
+
+gencred.df <- build_gen_cred_file()
+gencred.df <- build_full_file(gencred.df)
 
 write.table(x=gencred.df,file=work.dir%&%"genetic_credible_sets/gencred.txt",sep="\t",quote=FALSE,row.names=F)
 
