added alternative checks

--- a/method_C/physiology-loci-enrichment.Rmd
+++ b/method_C/physiology-loci-enrichment.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r}
 
-set.seed(1)
+set.seed(100)
 
 "%&%" <- function(a,b) paste0(a,b)
 
@@ -129,4 +129,85 @@ write.table(x=df2,file = work.dir %&% "analysis_files/" %&%
               "phys-enrich_weighted.txt",sep="\t",quote=F,row.names=F)
 
 ```
+
+# Sanity check 
+
+```{r}
+
+#ids <- unique(phys.df$Locus.ID_inCREDS)
+#for (id in ids){
+#  g <- filter(phys.df,Locus.ID_inCREDS==id)$GENE_LABEL
+#  g2 <- filter(cred.df,CondID==id)$symbol %>% unique(.)
+#  print(c(id,g,g2))
+#}
+ 
+
+```
+
+
+
+
+# Physiology driven enrichment (see if phys groups are enriched for higher tissue scores)
+
+
+```{r}
+
+enrich_test_v2 <- function(phys.vec, tissue, class.df,iter=10000){
+  if (tissue == "peripheral"){
+    full.vec <- select(class.df,one_of("liver","muscle","adipose")) %>% rowSums(.)
+    query.vec <- filter(class.df,Cond.ID%in%phys.vec) %>% select(.,one_of("liver","muscle","adipose")) %>% rowSums(.)
+  } else{
+    full.vec <- select(class.df,one_of(tissue)) %>% as.matrix(.) %>% as.numeric(.)
+    query.vec <- filter(class.df,Cond.ID%in%phys.vec) %>% select(.,one_of(tissue)) %>% as.matrix(.) %>% as.numeric(.)
+  }
+  obs.mean <- mean(query.vec)
+  null.vec <- c()
+  pb <- txtProgressBar(min=0,max=iter,style=3)
+  for (i in 1:iter){
+    setTxtProgressBar(pb,i)
+      null.vec <- append(null.vec,sample(x=full.vec,size=length(query.vec),replace=TRUE) %>% mean(.))
+  }
+  enrichment <- obs.mean / mean(null.vec)
+  p <- (sum(null.vec >= obs.mean) + 1) / (iter + 1)
+  out.df <- data.frame(obs.mean=obs.mean,null.mean=mean(null.vec),enrichment=enrichment,p=p,stringsAsFactors = F)
+}
+
+
+build_enrich_df_v2 <- function(class.df){
+  tiss.vec <- c("islet","liver","adipose","muscle","peripheral")
+  phys.vec <- c("BMI-Dys","Insulin_Action","Insulin_Secretion")
+  out.df <- c()
+  for (phys in phys.vec){
+    query.vec <- filter(phys.df,Physiology==phys)$Locus.ID_inCREDS %>% 
+      unique(.)    
+    for (tiss in tiss.vec){
+      test.df <- enrich_test_v2(query.vec,tiss,class.df,iter=10000)
+      test.df$tissue <- tiss; test.df$physiology <- phys
+      test.df <- dplyr::select(test.df,one_of("physiology","tissue",
+                                              "obs.mean",
+                                              "null.mean",
+                                              "enrichment","p"))
+      out.df <- rbind(out.df,test.df)
+    }
+  }
+  return(out.df)
+}
+
+
+```
+
+
+```{r}
+df3 <- build_enrich_df_v2(unweighted.df)
+write.table(x=df3,file = work.dir %&% "analysis_files/" %&% 
+              "phys-enrich-V2_unweighted.txt",sep="\t",quote=F,row.names=F)
+
+df4 <- build_enrich_df_v2(weighted.df)
+write.table(x=df4,file = work.dir %&% "analysis_files/" %&% 
+              "phys-enrich-V2_weighted.txt",sep="\t",quote=F,row.names=F)
+```
+
+
+
+
 
