--- a/method_C/02.2_evaluate-pca-plots.Rmd
+++ b/method_C/02.2_evaluate-pca-plots.Rmd
@@ -28,8 +28,8 @@ work.dir <- proj.dir %&% "method_C/"
 analysis.dir <- work.dir %&% "analysis_files/"
 plot.dir <- work.dir %&% "plots/"
 
-block.df <- fread(methA.dir%&%"null_results/null_results_blocks.txt",sep="\t")
-fcred.df <- fread(methA.dir %&%"null_results/null_results_func-cred-sets.txt")
+
+cred.df <- fread(work.dir %&% "genetic_credible_sets/gencred.txt")
 
 
 ```
@@ -37,15 +37,18 @@ fcred.df <- fread(methA.dir %&%"null_results/null_results_func-cred-sets.txt")
 
 ```{r}
 
-keep.df <- fread(proj.dir %&% "input_data/" %&% "380.locus.ID.txt")
-keep.vec <- keep.df$Locus.ID_inCREDS
+map_condids <- function(df){
+  Cond.ID <- map(1:dim(df)[1],function(i){
+    filter(cred.df,Locus.ID==df$Locus.ID[i])$CondID %>% unique(.)
+  }) %>% as.character(.)
+  df$Locus.ID <- Cond.ID
+  return(df)
+}
 
-weighted.df <- fread(analysis.dir %&% "tissue_ppa_divvy-full-weighted-unscaled-CodingNotRN.txt") %>% 
-  filter(.,Locus.ID %in% keep.vec)
-unweighted.df <- fread(analysis.dir %&% "tissue_ppa_divvy-full-unweighted-unscaled-CodingNotRN.txt") %>% 
-  filter(.,Locus.ID %in% keep.vec)
-alt.df <- fread(analysis.dir %&% "tissue-scores-alternative_CodingNotRN.txt") %>% 
-  filter(.,Locus.ID %in% keep.vec)  
+
+
+unweighted.df <- fread(analysis.dir %&% "tissue_ppa_divvy-full-unweighted-unscaled.txt") %>% map_condids(.)
+weighted.df <- fread(analysis.dir %&% "tissue_ppa_divvy-full-weighted-unscaled.txt") %>% map_condids(.) 
 
 ```
 
@@ -82,7 +85,7 @@ make_pca_inputs <- function(ppa.df,centerScale=FALSE){
   
   refseq <- map(1:dim(ppa.df)[1],function(i){
     loc <- ppa.df$Locus.ID[i]
-    gene <- filter(block.df,Locus.ID==loc)$refseq
+    gene <- filter(cred.df,CondID==loc)$symbol %>% unique(.)
   }) %>% as.character(.)
   ppa.df$refseq <- refseq
   ppa.df$Plot.ID <- ppa.df$Locus.ID %&% ": " %&% ppa.df$refseq 
@@ -247,7 +250,6 @@ complete_pca <- function(ppa.df,centerScale,savename){
 
 pca.list <- make_pca_inputs(weighted.df,centerScale=FALSE) 
 pca.list.un <- make_pca_inputs(unweighted.df,centerScale=FALSE) 
-pca.list.alt <- make_pca_inputs(alt.df,centerScale=FALSE) 
 
 
 
@@ -259,7 +261,6 @@ pca.list.alt <- make_pca_inputs(alt.df,centerScale=FALSE)
 
 plt <- complete_pca(weighted.df,centerScale=FALSE)
 plt.un <- complete_pca(unweighted.df,centerScale=FALSE)
-plt.alt <- complete_pca(alt.df,centerScale=FALSE)
 
 ```
 
@@ -279,10 +280,6 @@ pca.list.unweighted.pruned <- make_pca_inputs(filter(unweighted.df,other<=0.1),
                                  centerScale=FALSE)  
 complete_pca(filter(unweighted.df,other<=0.1),centerScale=FALSE)
 
-
-pca.list.alt.pruned <- make_pca_inputs(filter(alt.df,other<=0.1),
-                                 centerScale=FALSE)  
-complete_pca(filter(alt.df,other<=0.1),centerScale=FALSE)
 
 ```
 
@@ -323,18 +320,3 @@ ggsave(plot=pruneB.plt.un,filename=plot.dir%&%
 
 ```
 
-
-Alternative method
-
-```{r}
-
-pruneA.plt.alt <- pca_plot_annotated(pca.list.alt.pruned[[1]],
-                   pca.list.alt.pruned[[2]],"PC1","PC2")
-pruneB.plt.alt <- pca_plot_annotated(pca.list.alt.pruned[[1]],
-                   pca.list.alt.pruned[[2]],"PC2","PC3")
-ggsave(plot=pruneA.plt.alt,filename=plot.dir%&%
-         "pca_pruned-full-alternative-pc1-pc2.png",height=6,width=6)
-ggsave(plot=pruneB.plt.alt,filename=plot.dir%&%
-         "pca_pruned-full-alternative-pc2-pc3.png",height=6,width=6)
-
-```
